--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="./css/styles.css">   
+    <link rel="stylesheet" href="./sass/main.css"> 
 </head>
 <body>
 <div class="container"></div>
