modificamos pagina productos con sass

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="productos.html">Productos</a></li>
-          <li><a class="dropdown-item" href="sobre-nosotros.html">Sobre nosotros</a></li>
-          <li><a class="dropdown-item" href="./ubicacion.html">Ubicación</a></li>
-          <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+          <li><a class="dropdown-item" href="./pages/sobre-nosotros.html">Sobre nosotros</a></li>
+          <li><a class="dropdown-item" href="./pages/ubicacion.html">Ubicación</a></li>
+          <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -40,7 +40,7 @@
   </div>
   <div class="productos">
     <div class="card" style="width: 18rem;">
-      <img src="./img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
+      <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Aquarius 1,5lts</h5>
         <p class="card-text">$2250</p>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="./img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
+      <img src="../mi-repositorio/img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Coca-cola 2,25lts</h5>
         <p class="card-text">$3620</p>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="./img/gordon-removebg-preview.png" class="card-img-top" alt="...">
+      <img src="../mi-repositorio/img/gordon-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Gin Gordons 700ml</h5>
         <p class="card-text">$13200</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="./img/nampe-removebg-preview.png" class="card-img-top" alt="...">
+      <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Nampe Malbec 750ml</h5>
         <p class="card-text">$5520</p>
@@ -86,9 +86,9 @@
       </div>
       <div class="redes">
         <ul>
-        <li><i class="fi fi-brands-instagram"></i></li>
-        <li><i class="fi fi-brands-whatsapp"></i></li>
-        <li><i class="fi fi-brands-facebook"></i></li>
+        <li><i class="fi fi-brands-instagram ig"></i></li>
+        <li><i class="fi fi-brands-whatsapp wsp"></i></li>
+        <li><i class="fi fi-brands-facebook fa"></i></li>
         </ul>
       </div>
     </div>
