--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,16 +9,16 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="./css/styles.css">   
-    <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="../css/styles.css">   
+    <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
 <header>
-  <div class="container">
+  <div class="container ">
     <div class="row">
-      <div class="col">
-        <div class="logo  ">
-          <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
+      <div class="col ">
+        <div class="logo text-center">
+          <a title="Contti" href="../index.html"  ><img src="../img/contti_logo-removebg-preview.png" width="120"/></a>
       </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
 </nav>
 <hr>
 <main>
-<div class="pag-productos">
+<div class="pag-productos d-flex justify-content-between p-3">
   <h2>Productos</h2>
   <p>Filtrar</p>
 </div>
@@ -62,7 +62,7 @@
   <div class="row  ">
       <div class="col p-3 d-flex justify-content-center ">
         <div class="card " style="width: 18rem;">
-          <img src="./img/nampe-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nampe Malbec 750ml</h5>
             <p class="card-text">$5520</p>
@@ -72,7 +72,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card " style="width: 18rem;">
-          <img src="./img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Aquarius 1,5lts</h5>
             <p class="card-text">$2250</p>
@@ -82,7 +82,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="./img/gordon-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/gordon-removebg-preview.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Gin Gordons 700ml</h5>
             <p class="card-text">$13200</p>
@@ -92,7 +92,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center ">
         <div class="card" style="width: 18rem;">
-          <img src="./img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Coca-cola 2,25lts</h5>
             <p class="card-text">$3620</p>
@@ -104,7 +104,7 @@
     <div class="row">
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="./img/redlabel.png" class="card-img-top" alt="...">
+          <img src="../img/redlabel.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Red Label 750ml</h5>
             <p class="card-text">$22000</p>
@@ -114,7 +114,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="./img/monster.png" class="card-img-top" alt="...">
+          <img src="../img/monster.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Monster 437ml</h5>
             <p class="card-text">$2400</p>
@@ -124,7 +124,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="./img/nampe-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nampe Malbec 750ml</h5>
             <p class="card-text">$5520</p>
@@ -134,7 +134,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card " style="width: 18rem;">
-          <img src="./img/shweppes-removebg-preview (2).png" class="card-img-top " alt="...">
+          <img src="../img/shweppes-removebg-preview (2).png" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title">Shweppes Tónica 1,5lts</h5>
             <p class="card-text">$4000</p>
@@ -150,7 +150,7 @@
 <footer class="pie">
   <div class="links">
     <div class="logo-pie">
-    <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
+    <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
     </div>
     <div class="redes">
       <ul>
