modificamos pagina contacto con sass

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,13 +9,13 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="./css/styles.css">  
-    <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="../css/styles.css">  
+    <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
     <div class="formulario container">
         <form class="row p-3">
-            <a title="Contti" href="./index.html" class="text-center"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120"  /></a>
+            <a title="Contti" href="../index.html" class="text-center"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120"  /></a>
             <div class="col-6">
                 <input type="text" class="form-control" id="nombre" placeholder="Nombre y apellido">
             </div>
@@ -37,7 +37,7 @@
     <footer class="pie">
         <div class="links">
           <div class="logo-pie">
-          <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
+          <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
           </div>
           <div class="redes">
             <ul>
