modificamos pagina sobre nosotros con sass

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -9,8 +9,8 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="./css/styles.css">   
-    <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="../css/styles.css">   
+    <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col ">
         <div class="logo text-center">
-          <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
+          <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
         </div>
       </div>
     </div>
@@ -30,31 +30,31 @@
 
     <div class="row">
     <div class="col-sm d-flex justify-content-center ">
-        <img src="./img/distribuidora1.jpg" alt="" width="300">
+        <img src="../img/distribuidora1.jpg" alt="" width="300">
     </div>
     <div class="col-sm-9">
-      <h2 class="text-center">Lorem ipsum</h2>
-      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloremque debitis adipisci rerum consequuntur, ipsam ipsa, temporibus quod beatae minus maiores laborum tempore autem in optio. Consequuntur minus officiis dolorem!</p>
+      <h2 class="text-center">¿Quienes somos?</h2>
+      <p class="text-center">En Contti, somos distribuidores de bebidas de alta calidad. Trabajamos con marcas reconocidas para llevar una amplia variedad de productos a consumidores exigentes. Garantizamos entregas rápidas y confiables para brindarte una experiencia de bebida única.</p>
     </div>
     </div>
 <hr>
     <div class="row">
       <div class="col-sm-9 ">
-        <h2 class="text-center">Lorem ipsum</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minima voluptatem provident repellat vero, odio iste dignissimos, doloribus atque ea consequuntur magnam, necessitatibus suscipit cumque voluptate quod aperiam. Quisquam, dolore!</p>
+        <h2 class="text-center">Nuestros productos</h2>
+        <p class="text-center">En Contti, nos enorgullece ofrecer una cuidadosa selección de bebidas premium. Trabajamos con productores y fabricantes de renombre para brindarte una experiencia de sabor excepcional.</p>
       </div>
     <div class="col-sm d-flex justify-content-center ">
-      <img src="./img/distribuidora2.jpg" alt="" width="300" >
+      <img src="../img/distribuidora2.jpg" alt="" width="300" >
     </div>
     </div>
 <hr>
     <div class="row">
       <div class="col-sm-3 d-flex justify-content-center ">
-        <img src="./img/distribuidora 3.jpg" alt="" width="300">
+        <img src="../img/distribuidora 3.jpg" alt="" width="300">
       </div>
     <div class="col-sm">
-      <h2 class="text-center">Lorem ipsum</h2>
-     <p class="text-center"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, saepe. Sapiente, deserunt nemo nobis deleniti id, voluptate porro aut, cupiditate facere quidem architecto corrupti amet eligendi sint saepe. Incidunt, doloribus?</p>
+      <h2 class="text-center">Nuestra mision</h2>
+     <p class="text-center"> En Contti, nos dedicamos a conectar a las personas con las mejores bebidas del mercado. Nuestra misión es asegurarnos de que nuestros clientes tengan acceso a una amplia gama de opciones de bebidas premium, sin importar su ubicación</p>
     </div>
     </div>
   </div>
