modificamos pagina ubicacion con sass

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -9,12 +9,12 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="./css/styles.css">  
-    <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="../css/styles.css">  
+    <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
   <div class="logo text-center">
-    <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
+    <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
   </div>
     <hr>
     <div class="container">
@@ -34,7 +34,7 @@
     <footer class="pie">
       <div class="links">
         <div class="logo-pie">
-        <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
+        <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
         </div>
         <div class="redes">
           <ul>
