arreglamos mas vendidos pagina index

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Aquarius 1,5lts</h5>
+        <h5 class="card-title">Aquarius 1,5lts x6</h5>
         <p class="card-text">$2250</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
@@ -51,7 +51,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Coca-cola 2,25lts</h5>
+        <h5 class="card-title">Coca-cola 2,25lts x6</h5>
         <p class="card-text">$3620</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
@@ -60,7 +60,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/gordon-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Gin Gordons 700ml</h5>
+        <h5 class="card-title">Gin Gordons 700ml x6</h5>
         <p class="card-text">$13200</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
@@ -69,7 +69,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Nampe Malbec 750ml</h5>
+        <h5 class="card-title">Nampe Malbec 750ml x6</h5>
         <p class="card-text">$5520</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
