--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -62,7 +62,7 @@
   <footer class="pie">
     <div class="links">
       <div class="logo-pie">
-      <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
+      <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="110" /></a>
       </div>
       <div class="redes">
         <ul>
