agregamos redes a las paginas

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -154,9 +154,9 @@
     </div>
     <div class="redes">
       <ul>
-      <li><i class="fi fi-brands-instagram"></i></li>
-      <li><i class="fi fi-brands-whatsapp"></i></li>
-      <li><i class="fi fi-brands-facebook"></i></li>
+      <li><i class="fi fi-brands-instagram ig"></i></li>
+      <li><i class="fi fi-brands-whatsapp wsp"></i></li>
+      <li><i class="fi fi-brands-facebook fa"></i></li>
       </ul>
     </div>
   </div>
