mejoramos los headers de todas las paginas

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -13,10 +13,25 @@
     <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
-  <div class="logo text-center">
-    <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
-  </div>
-    <hr>
+<header class="headerPaginas">
+    <div>
+      <div class="dropdown">
+          <button  class="btn m-2 shadow-none align-center" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" >
+          <i class="fi fi-br-menu-burger"></i>
+          </button>
+          <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
+          <i class=" fi fi-sr-shopping-cart m-2"></i>
+  
+  
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
+            <li><a class="dropdown-item" href="./sobre-nosotros.html">Sobre nosotros</a></li>
+            <li><a class="dropdown-item" href="./ubicacion.html">Ubicación</a></li>
+            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+  </header>
     <div class="container">
         <div class="row">
             <div class="col-12">
