--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header class="site-header inicio">
   <div>
     <div class="dropdown">
-        <button  class="btn m-2 shadow-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" .p-3>
+        <button  class="btn m-2 shadow-none brn-dark" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" .p-3>
         <i class="fi fi-br-menu-burger"></i>
         </button>
         <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
