--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,9 +13,27 @@
     <link rel="stylesheet" href="../sass/main.css"> 
 </head>
 <body>
+  <header class="headerPaginas">
+    <div>
+      <div class="dropdown">
+          <button  class="btn m-2 shadow-none align-center" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" >
+          <i class="fi fi-br-menu-burger"></i>
+          </button>
+          <a title="Contti" href="../index.html"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
+          <i class=" fi fi-sr-shopping-cart m-2"></i>
+  
+  
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="./productos.html">Productos</a></li>
+            <li><a class="dropdown-item" href="./sobre-nosotros.html">Sobre nosotros</a></li>
+            <li><a class="dropdown-item" href="./ubicacion.html">Ubicación</a></li>
+            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+  </header>
     <div class="formulario container">
         <form class="row p-3">
-            <a title="Contti" href="../index.html" class="text-center"><img src="../img/contti_logo-removebg-preview.png" alt="Contti" width="120"  /></a>
             <div class="col-6">
                 <input type="text" class="form-control" id="nombre" placeholder="Nombre y apellido">
             </div>
