--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="./css/styles.css">   
     <link rel="stylesheet" href="./sass/main.css"> 
+    <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
+    <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
 <body>
 <div class="container"></div>
 <header class="site-header inicio">
   <div>
     <div class="dropdown">
-        <button  class="btn m-2 shadow-none brn-dark" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" .p-3>
+        <button  class="btn m-2 shadow-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" .p-3>
         <i class="fi fi-br-menu-burger"></i>
         </button>
         <a title="Contti" href="./index.html"><img src="./img/contti_logo-removebg-preview.png" alt="Contti" width="120" /></a>
