--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -11,6 +11,8 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="../css/styles.css">  
     <link rel="stylesheet" href="../sass/main.css"> 
+    <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
+    <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
 <body>
 <header class="headerPaginas">
