agregamos alts y arreglamos errores

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -71,7 +71,7 @@
   <div class="row  ">
       <div class="col p-3 d-flex justify-content-center ">
         <div class="card " style="width: 18rem;">
-          <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
           <div class="card-body">
             <h5 class="card-title">Nampe Malbec 750ml</h5>
             <p class="card-text">$5520</p>
@@ -81,7 +81,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card " style="width: 18rem;">
-          <img src="../img/pomelo-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius Pomelo">
           <div class="card-body">
             <h5 class="card-title">Aquarius 1,5lts</h5>
             <p class="card-text">$2250</p>
@@ -91,9 +91,9 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="../img/gordon-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
           <div class="card-body">
-            <h5 class="card-title">Gin Gordons 700ml</h5>
+            <h5 class="card-title">Gin Gordon's 700ml</h5>
             <p class="card-text">$13200</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -101,7 +101,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center ">
         <div class="card" style="width: 18rem;">
-          <img src="../img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
           <div class="card-body">
             <h5 class="card-title">Coca-cola 2,25lts</h5>
             <p class="card-text">$3620</p>
@@ -113,7 +113,7 @@
     <div class="row">
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="../img/redlabel.png" class="card-img-top" alt="...">
+          <img src="../img/redlabel.png" class="card-img-top" alt="Whisky Red Label">
           <div class="card-body">
             <h5 class="card-title">Red Label 750ml</h5>
             <p class="card-text">$22000</p>
@@ -123,7 +123,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="../img/monster.png" class="card-img-top" alt="...">
+          <img src="../img/monster.png" class="card-img-top" alt="Monster">
           <div class="card-body">
             <h5 class="card-title">Monster 437ml</h5>
             <p class="card-text">$2400</p>
@@ -133,9 +133,9 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="...">
+          <img src="../img/almamora-removebg-preview.png" class="card-img-top" alt="Vino Almamora">
           <div class="card-body">
-            <h5 class="card-title">Nampe Malbec 750ml</h5>
+            <h5 class="card-title">Almamora Malbec 750ml</h5>
             <p class="card-text">$5520</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -143,7 +143,7 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <div class="card " style="width: 18rem;">
-          <img src="../img/shweppes-removebg-preview (2).png" class="card-img-top " alt="...">
+          <img src="../img/shweppes-removebg-preview (2).png" class="card-img-top " alt="Shweppes Tonica">
           <div class="card-body">
             <h5 class="card-title">Shweppes Tónica 1,5lts</h5>
             <p class="card-text">$4000</p>
