--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -40,7 +40,7 @@
 
     <div class="row">
     <div class="col-sm d-flex justify-content-center ">
-        <img src="../img/distribuidora1.jpg" alt="" width="300">
+        <img src="../img/distribuidora1.jpg" alt="Equipo" width="300">
     </div>
     <div class="col-sm-9">
       <h2 class="text-center">¿Quienes somos?</h2>
@@ -54,13 +54,13 @@
         <p class="text-center">En Contti, nos enorgullece ofrecer una cuidadosa selección de bebidas premium. Trabajamos con productores y fabricantes de renombre para brindarte una experiencia de sabor excepcional.</p>
       </div>
     <div class="col-sm d-flex justify-content-center ">
-      <img src="../img/distribuidora2.jpg" alt="" width="300" >
+      <img src="../img/distribuidora2.jpg" alt="Productos" width="300" >
     </div>
     </div>
 <hr>
     <div class="row">
       <div class="col-sm-3 d-flex justify-content-center ">
-        <img src="../img/distribuidora 3.jpg" alt="" width="300">
+        <img src="../img/distribuidora 3.jpg" alt="Trabajo" width="300">
       </div>
     <div class="col-sm">
       <h2 class="text-center">Nuestra mision</h2>
