agregamos centrado a los produtcos del index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div>
     <h2>Más vendidos</h2>
   </div>
-  <div class="productos">
+  <div class="productos text-center">
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
       <div class="card-body">
