--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <div class="referencias">
       <h3>Secciones</h3>
       <ul>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Sobre nosotros</a></li>
-        <li><a href="#">Ubicación</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="../mi-repositorio/pages/productos.html">Productos</a></li>
+        <li><a href="../mi-repositorio/pages/sobre-nosotros.html">Sobre nosotros</a></li>
+        <li><a href="../mi-repositorio/pages/ubicacion.html">Ubicación</a></li>
+        <li><a href="../mi-repositorio/pages/contacto.html">Contacto</a></li>
       </ul>
     </div>
     <div class="newsletter">
