--- a/pages/productos.html
+++ b/pages/productos.html
@@ -66,7 +66,7 @@
   <h2>Productos</h2>
   <p>Filtrar</p>
 </div>
-<div class="catalogo ">
+<div class="catalogo text-center">
 <div class="container ">
   <div class="row  ">
       <div class="col p-3 d-flex justify-content-center ">
