mejoramos el codigo

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
       </div>
     </div>
 </header>
-<section class="mas-vendidos">
-  <div>
+<main class="mas-vendidos">
+
+  <section>
     <h2>Más vendidos</h2>
-  </div>
-  <div class="productos text-center">
+  </section>
+
+  <section class="productos text-center">
     <div class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
       <div class="card-body">
@@ -76,9 +78,9 @@
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
     </div>
+  </section>
 
-  </div>
-</section>
+</main>
 <hr>
 
 <footer class="pie">
