--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,14 +34,14 @@
         </div>
       </div>
   </header>
-    <div class="formulario container">
+    <main class="formulario container">
         <form class="row p-3">
-            <div class="col-6">
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre y apellido">
-            </div>
-            <div class="col-6">
-                <input type="text" class="form-control" id="numero" placeholder="Numero de telefono">
-            </div>
+        <div class="col-6">
+            <input type="text" class="form-control" id="nombre" placeholder="Nombre y apellido">
+        </div>
+        <div class="col-6">
+            <input type="text" class="form-control" id="numero" placeholder="Numero de telefono">
+        </div>
         <div class="email col-12 p-2">
             <input type="email" class="form-control" id="email" placeholder="Email">
         </div>
@@ -51,8 +51,7 @@
         <div class="col-12">
             <button type="submit" class="btn btn-danger" >Enviar</button>
         </div>
-    </div>
-    </div>
+      </main>
     <hr>
     <footer class="pie">
         <div class="links">
