--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -36,9 +36,9 @@
   </header>
 
 <main>
-  <div class="container-fluid">
+  <section class="container-fluid">
 
-    <div class="row">
+    <article class="row">
     <div class="col-sm d-flex justify-content-center ">
         <img src="../img/distribuidora1.jpg" alt="Equipo" width="300">
     </div>
@@ -46,9 +46,9 @@
       <h2 class="text-center">¿Quienes somos?</h2>
       <p class="text-center">En Contti, somos distribuidores de bebidas de alta calidad. Trabajamos con marcas reconocidas para llevar una amplia variedad de productos a consumidores exigentes. Garantizamos entregas rápidas y confiables para brindarte una experiencia de bebida única.</p>
     </div>
-    </div>
+  </article>
 <hr>
-    <div class="row">
+    <article class="row">
       <div class="col-sm-9 ">
         <h2 class="text-center">Nuestros productos</h2>
         <p class="text-center">En Contti, nos enorgullece ofrecer una cuidadosa selección de bebidas premium. Trabajamos con productores y fabricantes de renombre para brindarte una experiencia de sabor excepcional.</p>
@@ -56,9 +56,9 @@
     <div class="col-sm d-flex justify-content-center ">
       <img src="../img/distribuidora2.jpg" alt="Productos" width="300" >
     </div>
-    </div>
+    </article>
 <hr>
-    <div class="row">
+    <article class="row">
       <div class="col-sm-3 d-flex justify-content-center ">
         <img src="../img/distribuidora 3.jpg" alt="Trabajo" width="300">
       </div>
@@ -67,7 +67,7 @@
      <p class="text-center"> En Contti, nos dedicamos a conectar a las personas con las mejores bebidas del mercado. Nuestra misión es asegurarnos de que nuestros clientes tengan acceso a una amplia gama de opciones de bebidas premium, sin importar su ubicación</p>
     </div>
     </div>
-  </div>
+  </article>
   <hr>
   <footer class="pie">
     <div class="links">
