--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -34,8 +34,9 @@
         </div>
       </div>
   </header>
-    <div class="container">
-        <div class="row">
+  <main>
+    <section class="container">
+        <article class="row">
             <div class="col-12">
                 <h2 class="text-center">Ubicaciones</h2>
             </div>
@@ -45,8 +46,9 @@
           <div class="col p-3 d-flex justify-content-center ">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.0594073150237!2d-69.02993532441747!3d-33.5778067733394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967c2524bcb96c17%3A0x620aa2ec1569fc23!2sContti%20S.A!5e0!3m2!1sen!2sar!4v1685989723962!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-        </div>
-    </div>
+        </article>
+    </section>
+  </main>
     <hr>
     <footer class="pie">
       <div class="links">
