--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="./css/styles.css">   
     <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
     <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
@@ -43,7 +44,7 @@
   </section>
 
   <section class="productos text-center">
-    <div class="card" style="width: 18rem;">
+    <div data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
       <div class="card-body">
         <h5 class="card-title">Aquarius 1,5lts x6</h5>
@@ -52,7 +53,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
       <div class="card-body">
         <h5 class="card-title">Coca-cola 2,25lts x6</h5>
@@ -61,7 +62,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
       <div class="card-body">
         <h5 class="card-title">Gin Gordon's 700ml x6</h5>
@@ -70,7 +71,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
       <div class="card-body">
         <h5 class="card-title">Nampe Malbec 750ml x6</h5>
@@ -116,5 +117,9 @@
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
