--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="../css/styles.css">   
     <link rel="stylesheet" href="../sass/main.css"> 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
     <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
@@ -34,11 +35,12 @@
         </div>
       </div>
   </header>
+  <hr>
 
 <main>
   <section class="container-fluid">
 
-    <article class="row">
+    <article data-aos="fade-right" class="row">
     <div class="col-sm d-flex justify-content-center ">
         <img src="../img/distribuidora1.jpg" alt="Equipo" width="300">
     </div>
@@ -48,7 +50,7 @@
     </div>
   </article>
 <hr>
-    <article class="row">
+    <article data-aos="fade-left" class="row">
       <div class="col-sm-9 ">
         <h2 class="text-center">Nuestros productos</h2>
         <p class="text-center">En Contti, nos enorgullece ofrecer una cuidadosa selección de bebidas premium. Trabajamos con productores y fabricantes de renombre para brindarte una experiencia de sabor excepcional.</p>
@@ -58,7 +60,7 @@
     </div>
     </article>
 <hr>
-    <article class="row">
+    <article data-aos="fade-right" class="row">
       <div class="col-sm-3 d-flex justify-content-center ">
         <img src="../img/distribuidora 3.jpg" alt="Trabajo" width="300">
       </div>
@@ -98,6 +100,11 @@
     </div>
 </footer>
 </main>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
