--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="../css/styles.css">   
     <link rel="stylesheet" href="../sass/main.css"> 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
     <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
@@ -73,7 +74,7 @@
 <div class="container">
   <div class="row">
       <div class="col p-3 d-flex justify-content-center ">
-        <article class="card " style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
           <div class="card-body">
             <h5 class="card-title">Nampe Malbec 750ml</h5>
@@ -83,7 +84,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card " style="width: 18rem;">
+        <article data-aos="fade-up" class="card " style="width: 18rem;">
           <img src="../img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius Pomelo">
           <div class="card-body">
             <h5 class="card-title">Aquarius 1,5lts</h5>
@@ -93,7 +94,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card" style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
           <div class="card-body">
             <h5 class="card-title">Gin Gordon's 700ml</h5>
@@ -103,7 +104,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center ">
-        <article class="card" style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
           <div class="card-body">
             <h5 class="card-title">Coca-cola 2,25lts</h5>
@@ -115,7 +116,7 @@
     </div> 
     <div class="row">
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card" style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/redlabel.png" class="card-img-top" alt="Whisky Red Label">
           <div class="card-body">
             <h5 class="card-title">Red Label 750ml</h5>
@@ -125,7 +126,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card" style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/monster.png" class="card-img-top" alt="Monster">
           <div class="card-body">
             <h5 class="card-title">Monster 437ml</h5>
@@ -135,7 +136,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card" style="width: 18rem;">
+        <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/almamora-removebg-preview.png" class="card-img-top" alt="Vino Almamora">
           <div class="card-body">
             <h5 class="card-title">Almamora Malbec 750ml</h5>
@@ -145,7 +146,7 @@
         </article>
       </div>
       <div class="col p-3 d-flex justify-content-center">
-        <article class="card " style="width: 18rem;">
+        <article data-aos="fade-up" class="card " style="width: 18rem;">
           <img src="../img/shweppes-removebg-preview (2).png" class="card-img-top " alt="Shweppes Tonica">
           <div class="card-body">
             <h5 class="card-title">Shweppes Tónica 1,5lts</h5>
@@ -193,5 +194,9 @@
           
     
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
