--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -10,7 +10,8 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="../css/styles.css">  
-    <link rel="stylesheet" href="../sass/main.css"> 
+    <link rel="stylesheet" href="../sass/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> 
     <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
     <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
 </head>
@@ -40,10 +41,10 @@
             <div class="col-12">
                 <h2 class="text-center">Ubicaciones</h2>
             </div>
-            <div class="col p-3 d-flex justify-content-center">
+            <div data-aos="flip-right" class="col p-3 d-flex justify-content-center">
               <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3339.9809498813306!2d-68.44528492443548!3d-33.16212697350507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDA5JzQzLjciUyA2OMKwMjYnMzMuOCJX!5e0!3m2!1sen!2sar!4v1685989664212!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <div class="col p-3 d-flex justify-content-center ">
+          <div data-aos="flip-left" class="col p-3 d-flex justify-content-center ">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.0594073150237!2d-69.02993532441747!3d-33.5778067733394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967c2524bcb96c17%3A0x620aa2ec1569fc23!2sContti%20S.A!5e0!3m2!1sen!2sar!4v1685989723962!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </article>
@@ -79,5 +80,9 @@
       </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
