--- a/pages/productos.html
+++ b/pages/productos.html
@@ -77,7 +77,7 @@
         <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
           <div class="card-body">
-            <h5 class="card-title">Nampe Malbec 750ml</h5>
+            <h5 class="card-title">Nampe Malbec 750ml x6</h5>
             <p class="card-text">$5520</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -87,7 +87,7 @@
         <article data-aos="fade-up" class="card " style="width: 18rem;">
           <img src="../img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius Pomelo">
           <div class="card-body">
-            <h5 class="card-title">Aquarius 1,5lts</h5>
+            <h5 class="card-title">Aquarius 1,5lts x6</h5>
             <p class="card-text">$2250</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -97,7 +97,7 @@
         <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
           <div class="card-body">
-            <h5 class="card-title">Gin Gordon's 700ml</h5>
+            <h5 class="card-title">Gin Gordon's 700ml x6</h5>
             <p class="card-text">$13200</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -107,7 +107,7 @@
         <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
           <div class="card-body">
-            <h5 class="card-title">Coca-cola 2,25lts</h5>
+            <h5 class="card-title">Coca-cola 2,25lts x6</h5>
             <p class="card-text">$3620</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -119,7 +119,7 @@
         <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/redlabel.png" class="card-img-top" alt="Whisky Red Label">
           <div class="card-body">
-            <h5 class="card-title">Red Label 750ml</h5>
+            <h5 class="card-title">Red Label 750ml x6</h5>
             <p class="card-text">$22000</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -129,7 +129,7 @@
         <article data-aos="fade-up" class="card" style="width: 18rem;">
           <img src="../img/monster.png" class="card-img-top" alt="Monster">
           <div class="card-body">
-            <h5 class="card-title">Monster 437ml</h5>
+            <h5 class="card-title">Monster 437ml x6</h5>
             <p class="card-text">$2400</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
@@ -137,10 +137,10 @@
       </div>
       <div class="col p-3 d-flex justify-content-center">
         <article data-aos="fade-up" class="card" style="width: 18rem;">
-          <img src="../img/almamora-removebg-preview.png" class="card-img-top" alt="Vino Almamora">
+          <img src="../img/ades.png" class="card-img-top" alt="Ades">
           <div class="card-body">
-            <h5 class="card-title">Almamora Malbec 750ml</h5>
-            <p class="card-text">$5520</p>
+            <h5 class="card-title">Ades Manzana 1Lts x8</h5>
+            <p class="card-text">$2810</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
         </article>
@@ -149,7 +149,7 @@
         <article data-aos="fade-up" class="card " style="width: 18rem;">
           <img src="../img/shweppes-removebg-preview (2).png" class="card-img-top " alt="Shweppes Tonica">
           <div class="card-body">
-            <h5 class="card-title">Shweppes Tónica 1,5lts</h5>
+            <h5 class="card-title">Shweppes Tónica 1,5lts x6</h5>
             <p class="card-text">$4000</p>
             <a href="#" class="btn btn-danger">Comprar ahora</a>
           </div>
