--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </div>
     </div>
 </header>
+<section class="texto-inicio">
+  <h1>Bienvenidos</h1>
+  <p>Somos tu fuente confiable de bebidas. Descubre una amplia selección de productos de alta calidad que deleitarán tu paladar. Nuestra pasión por las bebidas excepcionales y nuestro compromiso con la satisfacción del cliente nos distinguen. Explora nuestro catálogo y déjate llevar por una experiencia de sabor inigualable.</p>
+</section>
 <main class="mas-vendidos">
 
   <section>
