agregamos redes sociales

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -168,9 +168,8 @@
     </div>
     <div class="redes">
       <ul>
-      <li><i class="fi fi-brands-instagram ig"></i></li>
-      <li><i class="fi fi-brands-whatsapp wsp"></i></li>
-      <li><i class="fi fi-brands-facebook fa"></i></li>
+        <li><a title="Instagram Contti" href="https://instagram.com/contti_sa?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fi fi-brands-instagram ig"></i></a></li>
+        <li><a title="Instagram Contti" href="https://wa.me/5492634776229" target="_blank"><i class="fi fi-brands-whatsapp wsp"></i></a></li>
       </ul>
     </div>
   </div>
