--- a/pages/productos.html
+++ b/pages/productos.html
@@ -176,10 +176,10 @@
   <div class="referencias">
     <h3>Secciones</h3>
     <ul>
-      <li><a href="#">Productos</a></li>
-      <li><a href="#">Sobre nosotros</a></li>
-      <li><a href="#">Ubicación</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a href="./productos.html">Productos</a></li>
+      <li><a href="./sobre-nosotros.html">Sobre nosotros</a></li>
+      <li><a href="./ubicacion.html">Ubicación</a></li>
+      <li><a href="./contacto.html">Contacto</a></li>
     </ul>
   </div>
   <div class="newsletter">
