--- a/index.html
+++ b/index.html
@@ -48,41 +48,42 @@
   </section>
 
   <section class="productos text-center">
-    <div data-aos="fade-up" class="card" style="width: 18rem;">
+    <article data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
       <div class="card-body">
         <h5 class="card-title">Aquarius 1,5lts x6</h5>
         <p class="card-text">$2250</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
-    </div>
+    </article>
 
-    <div data-aos="fade-up" class="card" style="width: 18rem;">
+    <article data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
       <div class="card-body">
         <h5 class="card-title">Coca-cola 2,25lts x6</h5>
         <p class="card-text">$3620</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
-    </div>
+    </article>
 
-    <div data-aos="fade-up" class="card" style="width: 18rem;">
+    <article data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
       <div class="card-body">
         <h5 class="card-title">Gin Gordon's 700ml x6</h5>
         <p class="card-text">$13200</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
-    </div>
+    </article>
 
-    <div data-aos="fade-up" class="card" style="width: 18rem;">
+    <article data-aos="fade-up" class="card" style="width: 18rem;">
       <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
       <div class="card-body">
         <h5 class="card-title">Nampe Malbec 750ml x6</h5>
         <p class="card-text">$5520</p>
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
-    </div>
+    </article>
+
   </section>
 
 </main>
