cambiamos background img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+          <li><a class="dropdown-item" href="../mi-repositorio/pages/productos.html">Productos</a></li>
           <li><a class="dropdown-item" href="./pages/sobre-nosotros.html">Sobre nosotros</a></li>
           <li><a class="dropdown-item" href="./pages/ubicacion.html">Ubicación</a></li>
           <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
@@ -75,7 +75,7 @@
       </div>
     </article>
 
-    <article data-aos="fade-up" class="card" style="width: 18rem;">
+    <article  data-aos="fade-up" class="card nampe" style="width: 18rem;">
       <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
       <div class="card-body">
         <h5 class="card-title">Nampe Malbec 750ml x6</h5>
@@ -83,9 +83,7 @@
         <a href="#" class="btn btn-danger">Comprar ahora</a>
       </div>
     </article>
-
   </section>
-
 </main>
 <hr>
 
