--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><a class="dropdown-item" href="../mi-repositorio/pages/productos.html">Productos</a></li>
-          <li><a class="dropdown-item" href="./pages/sobre-nosotros.html">Sobre nosotros</a></li>
-          <li><a class="dropdown-item" href="./pages/ubicacion.html">Ubicación</a></li>
-          <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="../mi-repositorio/pages/sobre-nosotros.html">Sobre nosotros</a></li>
+          <li><a class="dropdown-item" href="../mi-repositorio/pages/ubicacion.html">Ubicación</a></li>
+          <li><a class="dropdown-item" href="../mi-repositorio/pages/contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
