pasamos todo a css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="./css/styles.css">   
-    <link rel="stylesheet" href="./sass/main.css"> 
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Distribuidora dedicada a la distribucion de bebidas a lo largo de la zona cuyana">
     <meta name="keywords" content="Distribuidora, Bebidas , Mendoza ,Coca cola ,Vino , Distribuidora de bebidas">
